--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "npm run dev"
+    "start": "next start"
   },
   "dependencies": {
     "@notionhq/client": "^0.2.2",
